--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
   <body>
   
   <div class="header">
-    <h1>My Website</h1>
-    <p>A website created by me.</p>
+    <h1>Gladys' Celebration</h1>
+    <p>Come join us to celebrate Gladys</p>
   </div>
   
   <div class="navbar">
-    <a href="#">Link</a>
-    <a href="#">Link</a>
-    <a href="#">Link</a>
+    <a href="#">About Gladys</a>
+    <a href="#">Travel Information</a>
+    <a href="#">Where Are You Going?</a>
+    <a href="#">Itinerary</a>
+    <a href="#">Gallery</a>
     <a href="#" class="right">Link</a>
   </div>
   
