added about page

--- a/about.html
+++ b/about.html
@@ -8,12 +8,12 @@
   <body>
   
   <div class="header">
-    <h1>About Gladys</h1>
-    <p>The woman, the myth, the legend</p>
+    <h1>Gladys' Celebration</h1>
+    <p>Come join us to celebrate Gladys</p>
   </div>
   
   <div class="navbar">
-    <a href="about.html">About Gladys</a>
+    <a href="#">About Gladys</a>
     <a href="#">Travel Information</a>
     <a href="#">Where Are You Going?</a>
     <a href="#">Itinerary</a>
@@ -42,4 +42,3 @@
   
   </body>
   </html>
-  
