changed wording in header paragraph

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   
   <div class="header">
     <h1>About Gladys</h1>
-    <p>The woman, the myth, the legend</p>
+    <p>Come join us to celebrate Gladys</p>
   </div>
   
   <div class="navbar">
