--- a/index.html
+++ b/index.html
@@ -8,18 +8,16 @@
   <body>
   
   <div class="header">
-    <h1>About Gladys</h1>
+    <div class="navbar">
+      <h1>Gladys Celebration</h1>
+      <a href="about.html">About Gladys</a>
+      <a href="#">Travel Information</a>
+      <a href="#">Where Are You Going?</a>
+      <a href="#">Itinerary</a>
+      <a href="#">Gallery</a>
+    </div>
     <p>Come join us to celebrate Gladys</p>
   </div>
-  
-  <div class="navbar">
-    <a href="about.html">About Gladys</a>
-    <a href="#">Travel Information</a>
-    <a href="#">Where Are You Going?</a>
-    <a href="#">Itinerary</a>
-    <a href="#">Gallery</a>
-  </div>
-  
   <div class="row">
     <div class="main">
       <h2>TITLE HEADING</h2>
