--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
-<html lang="en">
+<!-- <html lang="en">
   <head>
     <title>Gladys' Celebration</title> 
     <meta charset="UTF-8">
@@ -41,4 +41,264 @@
   </div>
   
   </body>
-  </html>
+  </html> -->
+
+  <!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+/* Style the top navigation bar */
+.navbar {
+  overflow: hidden;
+  background-color: #333;
+}
+
+/* Style the navigation bar links */
+.navbar a {
+  float: left;
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 20px;
+  text-decoration: none;
+}
+
+/* Right-aligned link */
+.navbar a.right {
+  float: right;
+}
+
+/* Change color on hover */
+.navbar a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Style the container/contact section */
+.container {
+  border-radius: 5px;
+  background-color: white;
+  padding: 10px;
+}
+
+
+/* Style the container/contact section */
+.container2 {
+  border-radius: 5px;
+  background-color: white;
+  padding: 10px;
+}
+
+/* Elipse */
+
+.container3 {
+  border-radius: 5px;
+  background-color: white;
+  padding: 10px;
+}
+
+.polygons {
+  text-align: center;
+  position: relative;
+}
+.square {
+  width: 300px;
+  height: 250px;
+  background: #805FA2;
+  position: relative;
+  top: 65px;
+  display: inline-block;
+}
+.circle {
+  width: 300px;
+  height: 150px;
+  background: #805FA2;
+  border-radius: 50%;
+  position: absolute;
+  left: 0px;
+  top: -120px;
+  overflow: visible;
+  border-radius: 50%/65% 65% 0 0;
+}
+
+
+/* Create two columns that float next to eachother */
+.column {
+  float: left;
+  width: 50%;
+  margin-top: 6px;
+  padding: 75px;
+  background-color: white;
+}
+
+
+/* Column 2 */
+
+.column2 {
+  float: left;
+  width: 50%;
+  margin-top: 6px;
+  padding: 75px;
+  background-color: white;
+}
+
+/* Column 3 */
+
+.column3 {
+  float: left;
+  width: 50%;
+  margin-top: 6px;
+  padding: 75px;
+  background-color: white;
+}
+
+/* Column 4 */
+
+.column4 {
+  float: right;
+  width: 50%;
+  margin-top: 6px;
+  padding: 75px;
+  background-color: white;
+}
+
+/* Column 5 */
+
+.column5 {
+  float: left;
+  width: 50%;
+  margin-top: 6px;
+  padding: 75px;
+  background-color: white;
+}
+
+/* Column 6 */
+
+.column6 {
+  float: right;
+  width: 50%;
+  margin-top: 6px;
+  padding: 75px;
+  background-color: white;
+}
+
+/* Container 1 Row Adjusts */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+
+.row3:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.row5:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+
+/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .column, input[type=submit] {
+    width: 100%;
+    margin-top: 0;
+  }
+}
+</style>
+</head>
+<body>
+
+<h2>Responsive Contact Section</h2>
+<p>Resize the browser window to see the effect.</p>
+
+<div class="navbar">
+  <a href="#">Link</a>
+  <a href="#">Link</a>
+  <a href="#">Link</a>
+  <a href="#" class="right">Link</a>
+</div>
+
+<div class="container">
+  <div style="text-align:center">
+    <h2>Containter 1</h2>
+    <p>Containter 1 paragraph</p>
+ 		<div class="row">
+    		<div class="column">
+				 <div class="polygons">
+            			<div class="square">
+               				<div class="circle">
+                		</div>
+           			 </div>
+       			 </div>
+ 			 </div>
+   		<div class="column2">
+			<div class= "text-font">
+				<h2>Hello</h2>
+            </div>
+		</div>
+	</div>
+</div>
+</div>
+
+<div class="container2">
+  <div style="text-align:center">
+    <h2>Containter 2</h2>
+    <p>Containter 2 paragraph</p>
+ 		<div class="row3">
+    		<div class="column3">
+				<div class= "text-font">
+        			<h2>Hello</h2>
+				</div>
+			</div>
+   		<div class="column4">
+			 <div class="polygons">
+            			<div class="square">
+               				<div class="circle">
+                           	 <p>this is a paragraph.</p>
+                		</div>
+           			 </div>
+       			 </div>
+ 			 </div>
+		</div>
+	</div>
+</div>
+
+<div class="container3">
+  <div style="text-align:center">
+    <h2>Containter 3</h2>
+    <p>Containter 3 paragraph</p>
+ 		<div class="row5">
+    		<div class="column5">
+				    <div class="polygons">
+            			<div class="square">
+               				<div class="circle">
+                		</div>
+           			 </div>
+       			 </div>
+ 			 </div>
+   		<div class="column6">
+			<div class= "text-font">
+				<h2>Hello</h2>
+            </div>
+		</div>
+	</div>
+</div>
+</div>
+
+</body>
+</html>
