--- a/index.html
+++ b/index.html
@@ -1,43 +1,33 @@
 <html lang="en">
+
   <head>
     <title>Gladys' Celebration</title> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
   </head>
+
   <body>
-  
   <div class="header">
     <div class="navbar">
-      <h1>Gladys Celebration</h1>
+      <a href="index.html" class="homeNav">Home</a>
       <a href="about.html">About Gladys</a>
       <a href="#">Travel Information</a>
       <a href="#">Where Are You Going?</a>
       <a href="#">Itinerary</a>
       <a href="#">Gallery</a>
     </div>
-    <p>Come join us to celebrate Gladys</p>
-  </div>
-  <div class="row">
-    <div class="main">
-      <h2>TITLE HEADING</h2>
-      <h5>Title description, Dec 7, 2017</h5>
-      <div class="fakeimg" style="height:200px;">Image</div>
-      <p>Some text..</p>
-      <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-      <br>
-      <h2>TITLE HEADING</h2>
-      <h5>Title description, Sep 2, 2017</h5>
-      <div class="fakeimg" style="height:200px;">Image</div>
-      <p>Some text..</p>
-      <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+    <div class="hcontent">
+      <h1 class="sitename">Gladys Celebration</h1>
+      <p>Come join us to celebrate Gladys</p>
+      <a href = "https://forms.gle/7fXRia3P5yXMrRUJ6" class="button">RSVP</a>
     </div>
   </div>
-  
-  <div class="footer">
-    <h2>Footer</h2>
-  </div>
-  
+
+
   </body>
+
   </html>
+
+
   
