--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
-<html lang="en">
+<!-- <html lang="en">
   <head>
     <title>Gladys' Celebration</title> 
     <meta charset="UTF-8">
@@ -41,4 +41,99 @@
   </div>
   
   </body>
-  </html>
+  </html> -->
+
+<html>
+<head>
+  <title>Gladys' Celebration</title> 
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="styles.css">
+  <div class="navbar">
+    <a href="#">Travel Information</a>
+    <a href="#">Where Are You Going?</a>
+    <a href="#">Itinerary</a>
+    <a href="#">Gallery</a>
+    <a href="index.html" class="right">Gladys' Celebration</a>
+  </div>
+
+  <div class=" header" >
+    <div style="text-align:center">
+      <h2>Responsive Contact Section</h2>
+      <p>Resize the browser window to see the effect.</p>
+    </div>
+  </div>
+</head>
+
+<br>
+
+<body>
+<div class="container">
+  <div style="text-align:center">
+    <h2>Containter 1</h2>
+    <p>Containter 1 paragraph</p>
+ 		<div class="row">
+    		<div class="column">
+				 <div class="polygons">
+            			<div class="square">
+               				<div class="circle">
+                		</div>
+           			 </div>
+       			 </div>
+ 			 </div>
+   		<div class="column2">
+			<div class= "text-font">
+				<h2>Hello</h2>
+            </div>
+		</div>
+	</div>
+</div>
+</div>
+
+<div class="container2">
+  <div style="text-align:center">
+    <h2>Containter 2</h2>
+    <p>Containter 2 paragraph</p>
+ 		<div class="row3">
+    		<div class="column3">
+				<div class= "text-font">
+        			<h2>Hello</h2>
+				</div>
+			</div>
+   		<div class="column4">
+			 <div class="polygons">
+            			<div class="square">
+               				<div class="circle">
+                           	 <p>this is a paragraph.</p>
+                		</div>
+           			 </div>
+       			 </div>
+ 			 </div>
+		</div>
+	</div>
+</div>
+
+<div class="container3">
+  <div style="text-align:center">
+    <h2>Containter 3</h2>
+    <p>Containter 3 paragraph</p>
+ 		<div class="row5">
+    		<div class="column5">
+				    <div class="polygons">
+            			<div class="square">
+               				<div class="circle">
+                		</div>
+           			 </div>
+       			 </div>
+ 			 </div>
+   		<div class="column6">
+			<div class= "text-font">
+				<h2>Hello</h2>
+            </div>
+		</div>
+	</div>
+</div>
+</div>
+
+</body>
+</html>
