Styles changes p2 mads branch

--- a/where.html
+++ b/where.html
@@ -54,15 +54,18 @@
   <div class="navbar">
     <a href="about.html">About Gladys</a>
     <a href="#">Travel Information</a>
-    <a href="where.html">Where Are You Going?</a>
     <a href="#">Itinerary</a>
     <a href="#">Gallery</a>
+    <a href="index.html" class="right">Gladys' Celebration</a>
   </div>
 
-  <div class="container">
-    <div style="text-align:center"> 
-      <h2>Gladys' Celebration</h2>
-       <p>Lets go on a adventure.</p>
+  <br>
+  <br>
+  
+  <div class="header2">
+    <div style="text-align:left"> 
+      <h2>Where are we going?</h2>
+       <p>Lets break down our vacation destination.</p>
     </div>
   </div>
 
