--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
   <link rel="stylesheet" href="styles.css">
   <div class="navbar">
     <a href="#">Travel Information</a>
-    <a href="#">Where Are You Going?</a>
+    <a href="where.html">Where Are You Going?</a>
     <a href="#">Itinerary</a>
     <a href="#">Gallery</a>
     <a href="index.html" class="right">Gladys' Celebration</a>
@@ -59,7 +59,7 @@
 
   <div class=" header" >
     <div style="text-align:center">
-      <h2>Responsive Contact Section</h2>
+      <h2>About Gladys</h2>
       <p>Resize the browser window to see the effect.</p>
     </div>
   </div>
