--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <div class="navbar">
     <a href="about.html">About Gladys</a>
     <a href="#">Travel Information</a>
-    <a href="where.html">Where Are You Going?</a>
+    <a href="#">Where Are You Going?</a>
     <a href="#">Itinerary</a>
     <a href="#">Gallery</a>
   </div>
