mad branch changes p2

--- a/about.html
+++ b/about.html
@@ -50,33 +50,51 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="styles.css">
   <div class="navbar">
-    <a href="#">Travel Information</a>
-    <a href="#">Where Are You Going?</a>
+    <a href="index.html" class="navhome">Home</a>
+    <a href="about.html">About Gladys</a>
+    <a href="#">Travel & Destination Information</a>
+    <a href="#">What Are We Doing?</a>
     <a href="#">Itinerary</a>
     <a href="#">Gallery</a>
-    <a href="index.html" class="right">Gladys' Celebration</a>
-  </div>
-
-  <div class=" header" >
-    <div style="text-align:center">
-      <h2>About Gladys</h2>
-      <p>Resize the browser window to see the effect.</p>
-    </div>
   </div>
 </head>
 
-<br>
-
 <body>
-<div class="container">
-  <div style="text-align:center">
-    <h2>Containter 1</h2>
-    <p>Containter 1 paragraph</p>
- 		<div class="row">
-    		<div class="column">
-				 <div class="polygons">
-            			<div class="square">
-               				<div class="circle">
+  <div class="containerh">
+    <div style="text-align:left">
+      <p>***</p>
+       <div class="rowh">
+          <div class="columnh1">
+          <div class= "text-font">
+                <h1>Let's Talk About Gladys</h1>
+                <p>who is this beautiful soul...</p>
+          </div>
+        </div>
+         <div class="columnh2">
+            <div class="polygons">
+                    <div class="square">
+                         <div class="circle">
+                            <img class="fit-picture"
+                            src="/Resources/Images/IMG_0019.JPG"/>
+                         </div>
+                        </div>
+                    </div>
+              </div>
+    </div>
+   </div>
+
+  <br> 
+  <br>
+
+  <div class="container">
+    <div style="text-align:center">
+       <h2>Containter 1</h2>
+       <p>Containter 1 paragraph</p>
+ 		  <div class="row">
+    		  <div class="column">
+				    <div class="polygons">
+            		<div class="square">
+               			<div class="circle">
                 		</div>
            			 </div>
        			 </div>
@@ -104,7 +122,6 @@
 			 <div class="polygons">
             			<div class="square">
                				<div class="circle">
-                           	 <p>this is a paragraph.</p>
                 		</div>
            			 </div>
        			 </div>
