--- a/about.html
+++ b/about.html
@@ -52,9 +52,9 @@
   <div class="navbar">
     <a href="index.html" class="navhome">Home</a>
     <a href="about.html">About Gladys</a>
-    <a href="#">Travel & Destination Information</a>
-    <a href="#">What Are We Doing?</a>
-    <a href="#">Itinerary</a>
+    <a href="#">Travel Information</a>
+    <a href="#">Where are we going?</a>
+    <a href="Itinerary.html">Itinerary</a>
     <a href="#">Gallery</a>
   </div>
 </head>
@@ -62,7 +62,7 @@
 <body>
   <div class="containerh">
     <div style="text-align:left">
-      <p>***</p>
+      <br>
        <div class="rowh">
           <div class="columnh1">
           <div class= "text-font">
@@ -71,15 +71,9 @@
           </div>
         </div>
          <div class="columnh2">
-            <div class="polygons">
-                    <div class="square">
-                         <div class="circle">
-                            <img class="fit-picture"
-                            src="/Resources/Images/IMG_0019.JPG"/>
-                         </div>
-                        </div>
-                    </div>
-              </div>
+             <img class="fit-picture"
+             src="/Resources/Images/IMG_0019.JPG"/>
+          </div>
     </div>
    </div>
 
@@ -119,13 +113,7 @@
 				</div>
 			</div>
    		<div class="column4">
-			 <div class="polygons">
-            			<div class="square">
-               				<div class="circle">
-                		</div>
-           			 </div>
-       			 </div>
- 			 </div>
+      </div>
 		</div>
 	</div>
 </div>
