--- a/Itinerary.html
+++ b/Itinerary.html
@@ -61,8 +61,8 @@
   
   <div class="header2">
     <div style="text-align:left"> 
-      <h2>Where are we going?</h2>
-       <p>Lets break down our vacation destination.</p>
+      <h2>Whats the plan?</h2>
+       <p>Lets break down our vacation plans.</p>
     </div>
   </div>
 
