--- a/Pages/index.html
+++ b/Pages/index.html
@@ -3,7 +3,7 @@
     <title>Gladys' Celebration</title> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/Themes/indexTheme.css">
   </head>
 
   <body>
