--- a/Pages/index.html
+++ b/Pages/index.html
@@ -9,12 +9,13 @@
   <body>
     <div class="header">
       <div class="navbar">
-        <a href="index.html" class="homeNav">Home</a>
-        <a href="about.html">About Gladys</a>
-        <a href="#">Travel Information</a>
-        <a href="#">Where Are You Going?</a>
-        <a href="#">Itinerary</a>
+        <a href="/Pages/index.html" class="homeNav">Home</a>
+        <a href="/Pages/about.html">About Gladys</a>
+        <a href="/Pages/travel.html">Travel Information</a>
+        <a href="/Pages/where.html">Where Are You Going?</a>
+        <a href="/Pages/Itinerary.html">Itinerary</a>
         <a href="#">Gallery</a>
+        <a href="https://forms.gle/7fXRia3P5yXMrRUJ6" class="right">RSVP</a>
       </div>
       <div class="hcontent">
         <h1 class="sitename">Gladys Celebration</h1>
