--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   <body>
     <div class="header">
       <div class="navbar">
-        <a href="/docs/index.html" class="homeNav">Home</a>
-        <a href="/docs/about.html">About Gladys</a>
-        <a href="/docs/travel.html">Travel Information</a>
-        <a href="/docs/where.html">Where Are You Going?</a>
-        <a href="/docs/Itinerary.html">Itinerary</a>
+        <a href="index.html" class="homeNav">Home</a>
+        <a href="about.html">About Gladys</a>
+        <a href="travel.html">Travel Information</a>
+        <a href="here.html">Where Are You Going?</a>
+        <a href="itinerary.html">Itinerary</a>
         <a href="#">Gallery</a>
         <a href="https://forms.gle/7fXRia3P5yXMrRUJ6" class="right">RSVP</a>
       </div>
