deleting pages mads branch

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>Gladys' Celebration</title> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/Themes/indexTheme.css">
+    <link rel="stylesheet" href="Themes/indexTheme.css">
   </head>
 
   <body>
@@ -11,10 +11,11 @@
       <div class="navbar">
         <a href="index.html" class="homeNav">Home</a>
         <a href="about.html">About Gladys</a>
-        <a href="#">Travel Information</a>
-        <a href="#">Where Are You Going?</a>
-        <a href="#">Itinerary</a>
+        <a href="travel.html">Travel Information</a>
+        <a href="here.html">Where Are You Going?</a>
+        <a href="itinerary.html">Itinerary</a>
         <a href="#">Gallery</a>
+        <a href="https://forms.gle/7fXRia3P5yXMrRUJ6" class="right">RSVP</a>
       </div>
       <div class="hcontent">
         <h1 class="sitename">Gladys Celebration</h1>
