--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   <body>
     <div class="header">
       <div class="navbar">
-        <a href="index.html" class="homeNav">Home</a>
-        <a href="about.html">About Gladys</a>
-        <a href="travel.html">Travel Information</a>
-        <a href="here.html">Where Are You Going?</a>
-        <a href="itinerary.html">Itinerary</a>
-        <a href="#">Gallery</a>
+        <a href="gladysCelebration/index.html" class="homeNav">Home</a>
+        <a href="gladysCelebration/about.html">About Gladys</a>
+        <a href="gladysCelebration/travel.html">Travel Information</a>
+        <a href="gladysCelebration/here.html">Where Are You Going?</a>
+        <a href="gladysCelebration/itinerary.html">Itinerary</a>
+        <a href="gladysCelebration/gallery.html">Gallery</a>
         <a href="https://forms.gle/7fXRia3P5yXMrRUJ6" class="right">RSVP</a>
       </div>
       <div class="hcontent">
