--- a/about.html
+++ b/about.html
@@ -6,15 +6,15 @@
     <link rel="stylesheet" href="Themes/aboutTheme.css">
 </head>
 <body>
-    <div class="navbar">
-       	<a href="index.html" class="homeNav">Home</a>
-		<a href="about.html">About Gladys</a>
-		<a href="travel.html">Travel Information</a>
-		<a href="here.html">Where Are You Going?</a>
-		<a href="itinerary.html">Itinerary</a>
-		<a href="gallery.html">Gallery</a>
-		<a href="https://forms.gle/7fXRia3P5yXMrRUJ6" class="right">RSVP</a>
-	</div>
+	<div class="navbar">
+        <a href="index.html" class="homeNav">Home</a>
+        <a href="about.html">About Gladys</a>
+        <a href="where.html">Where Are You Going?</a>
+        <a href= "travel.html">Travel Help & Information</a>
+        <a href="itinerary.html">Itinerary</a>
+        <a href="gallery.html">Gallery</a>
+        <a href="https://forms.gle/7fXRia3P5yXMrRUJ6" class="right">RSVP</a>
+    </div>
 		<div class="container">
 			<div class="row">
 				<div class="column">
