--- a/gallery.html
+++ b/gallery.html
@@ -3,32 +3,37 @@
     <title>Gladys' Celebration</title> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles.css">
-    <div class="navbar">
-      <a href="index.html" class="navhome">Home</a>
-      <a href="about.html">About Gladys</a>
-      <a href="travel.html">Travel & Destination Information</a>
-      <a href="where.html">Where are we going?</a>
-      <a href="itinerary.html">Itinerary</a>
-      <a href="gallery.html">Gallery</a>
-    </div>
-  <div class="header2">
-    <div style="text-align:left"> 
+    <link rel="stylesheet" href="/Themes/galleryTheme.css">
+  </head>
+  <body>
+    <div class="header">
+        <div class="navbar">
+            <a href="index.html" class="homeNav">Home</a>
+            <a href="about.html">About Gladys</a>
+            <a href= "where.html">Where Are We Going?</a>
+            <a href= "travel.html">Travel Information</a>
+            <a href="itinerary.html">Itinerary</a>
+            <a href="gallery.html">Gallery</a>
+            <a href="https://forms.gle/7fXRia3P5yXMrRUJ6" class="right">RSVP</a>
+        </div>
+      </div>
+    <div class="header2">
+      <div style="text-align:left"> 
       <h2>Whats the plan?</h2>
        <p>Lets break down our vacation plans.</p>
     </div>
-  </div>
+    </div>
 
-  <div class="container">
-    <div style="text-align:center">
-      <h2>Containter 1</h2>
-      <p>Containter 1 paragraph</p>
-       <div class="row">
-          <div class="column">
-           <div class="polygons">
-                    <div class="square">
-                         <div class="circle">
-                      </div>
+    <div class="container">
+      <div style="text-align:center">
+        <h2>Containter 1</h2>
+        <p>Containter 1 paragraph</p>
+        <div class="row">
+            <div class="column">
+            <div class="polygons">
+                      <div class="square">
+                          <div class="circle">
+                        </div>
                     </div>
                 </div>
           </div>
