--- a/itinerary.html
+++ b/itinerary.html
@@ -3,16 +3,20 @@
     <title>Gladys' Celebration</title> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles.css">
-    <div class="navbar">
-      <a href="index.html" class="navhome">Home</a>
-      <a href="about.html">About Gladys</a>
-      <a href="#">Travel & Destination Information</a>
-      <a href="#">Where are we going?</a>
-      <a href="Itinerary.html">Itinerary</a>
-      <a href="#">Gallery</a>
-    </div>
-  <br>
+    <link rel="stylesheet" href="/Themes/itineraryTheme.css">
+  </head>
+
+  <body>
+    <div class="header">
+        <div class="navbar">
+            <a href="index.html" class="homeNav">Home</a>
+            <a href="about.html">About Gladys</a>
+            <a href= "where.html">Where Are We Going?</a>
+            <a href= "travel.html">Travel Information</a>
+            <a href="itinerary.html">Itinerary</a>
+            <a href="gallery.html">Gallery</a>
+            <a href="https://forms.gle/7fXRia3P5yXMrRUJ6" class="right">RSVP</a>
+        </div>
   <br>
   
   <div class="header2">
@@ -66,4 +70,4 @@
   </div>
   
   </body>
-  </html>
+</html>
