--- a/where.html
+++ b/where.html
@@ -1,68 +1,26 @@
-<!-- <html lang="en">
+<html>
   <head>
     <title>Gladys' Celebration</title> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/Themes/whereTheme.css">
   </head>
   <body>
-  
-  <div class="header">
-    <h1>About Gladys</h1>
-    <p>Come join us to celebrate Gladys</p>
-  </div>
-  
-  <div class="navbar">
-    <a href="about.html">About Gladys</a>
-    <a href="#">Travel Information</a>
-    <a href="#">Where Are You Going?</a>
-    <a href="#">Itinerary</a>
-    <a href="#">Gallery</a>
-  </div>
-  
-  <div class="row">
-    <div class="main">
-      <h2>TITLE HEADING</h2>
-      <h5>Title description, Dec 7, 2017</h5>
-      <div class="fakeimg" style="height:200px;">Image</div>
-      <p>Some text..</p>
-      <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-      <br>
-      <h2>TITLE HEADING</h2>
-      <h5>Title description, Sep 2, 2017</h5>
-      <div class="fakeimg" style="height:200px;">Image</div>
-      <p>Some text..</p>
-      <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+
+    <div class="navbar">
+      <a href="index.html" class="homeNav">Home</a>
+      <a href="about.html">About Gladys</a>
+      <a href= "where.html">Where Are We Going?</a>
+      <a href= "travel.html">Travel Information</a>
+      <a href="itinerary.html">Itinerary</a>
+      <a href="gallery.html">Gallery</a>
+      <a href="https://forms.gle/7fXRia3P5yXMrRUJ6" class="right">RSVP</a>
     </div>
-  </div>
-  
-  <div class="footer">
-    <h2>Footer</h2>
-  </div>
-  
-  </body>
-  </html> -->
-  <html>
-  <head>
-    <title>Gladys' Celebration</title> 
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles.css">
-  </head>
-  <body>
-
-  <div class="navbar">
-    <a href="about.html">About Gladys</a>
-    <a href="#">Travel Information</a>
-    <a href="#">Itinerary</a>
-    <a href="#">Gallery</a>
-    <a href="index.html" class="right">Gladys' Celebration</a>
-  </div>
 
   <br>
   <br>
   
-  <div class="header2">
+  <div class="header2"> 
     <div style="text-align:left"> 
       <h2>Where are we going?</h2>
        <p>Lets break down our vacation destination.</p>
