--- a/index.html
+++ b/index.html
@@ -26,24 +26,17 @@
 
     <div class="container">
       <div style="text-align:center">
-        <h2>Containter 1</h2>
-        <p>Containter 1 paragraph</p>
-         <div class="row">
-            <div class="column">
-             <div class="polygons">
-                      <div class="square">
-                           <div class="circle">
-                        </div>
+        <h2>Invitation details:</h2>
+          <p>***</p>
+            <div class="row">
+              <div class="polygons">
+                  <div class="square">
+                      <div class="circle">
                       </div>
                   </div>
-            </div>
-           <div class="column2">
-          <div class= "text-font">
-            <h2>Hello</h2>
                 </div>
-        </div>
+            </div>
       </div>
-    </div>
     </div>
     
     <div class="container2">
