--- a/index.html
+++ b/index.html
@@ -17,10 +17,17 @@
         <a href="gallery.html">Gallery</a>
         <a href="https://forms.gle/7fXRia3P5yXMrRUJ6" class="right">RSVP</a>
       </div>
-      <div class="hcontent">
-        <h1 class="sitename">Gladys Celebration</h1>
-        <p>Come join us to celebrate Gladys</p>
-        <a href = "https://forms.gle/7fXRia3P5yXMrRUJ6" class="button">RSVP</a>
+      <div class="containerh">
+        <div class="rowh">
+          <div class="column01">
+            <div class="hcontent">
+            <h1 class="sitename">Gladys Celebration</h1>
+            <p>Come join us to celebrate Gladys</p>
+            <a href = "https://forms.gle/7fXRia3P5yXMrRUJ6" class="button">RSVP</a>
+          </div>
+          <div class="column02">
+          </div>
+          <div class="column03">
       </div>
     </div>
 
@@ -29,12 +36,8 @@
         <h2>Invitation details:</h2>
           <p>***</p>
             <div class="row">
-              <div class="polygons">
-                  <div class="square">
-                      <div class="circle">
-                      </div>
-                  </div>
-                </div>
+                  <img class="fit-picture"
+                  src="/Resources/Images/IMG_0451.jpg"/>
             </div>
       </div>
     </div>
