--- a/index.html
+++ b/index.html
@@ -7,29 +7,34 @@
   </head>
 
   <body>
+   <div class="navbar">
+      <a href="index.html" class="homeNav">Home</a>
+      <a href="about.html">About Gladys</a>
+      <a href="where.html">Where Are You Going?</a>
+      <a href= "travel.html">Travel Help & Information</a>
+      <a href="itinerary.html">Itinerary</a>
+      <a href="gallery.html">Gallery</a>
+      <a href="https://forms.gle/7fXRia3P5yXMrRUJ6" class="right">RSVP</a>
+    </div>
     <div class="header">
-      <div class="navbar">
-        <a href="index.html" class="homeNav">Home</a>
-        <a href="about.html">About Gladys</a>
-        <a href="where.html">Where Are You Going?</a>
-        <a href= "travel.html">Travel Help & Information</a>
-        <a href="itinerary.html">Itinerary</a>
-        <a href="gallery.html">Gallery</a>
-        <a href="https://forms.gle/7fXRia3P5yXMrRUJ6" class="right">RSVP</a>
+      <div class="hcontent">
+        <h1 class="sitename">Gladys Celebration</h1>
+        <p>Come join us to celebrate Gladys</p>
+        <a href = "https://forms.gle/7fXRia3P5yXMrRUJ6" class="button">RSVP</a>
       </div>
-      <div class="containerh">
+        <img class="hcontentright" src="/Resources/Images/IMG_7922.JPG">
+    </div>
+
+
+      <!-- <div class="containerh">
         <div class="rowh">
           <div class="column01">
-            <div class="hcontent">
-            <h1 class="sitename">Gladys Celebration</h1>
-            <p>Come join us to celebrate Gladys</p>
-            <a href = "https://forms.gle/7fXRia3P5yXMrRUJ6" class="button">RSVP</a>
-          </div>
+            
           <div class="column02">
           </div>
           <div class="column03">
-      </div>
-    </div>
+      
+    </div> -->
 
     <div class="container">
       <div style="text-align:center">
