--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
 
         <div class="headerRight">
-          <img class="img1" src="/Resources/Images/IMG_7922.JPG" />
+          <img class="img1" src="IMG_7922.JPG" />
         </div>
       </section>
 
